--- a/composer.json
+++ b/composer.json
@@ -33,17 +33,9 @@
         "js/mobiscroll.scroller.js",
 	"js/mobiscroll.util.datetime.js",
 	"js/mobiscroll.datetime.js",
+        "js/mobiscroll.jqmwidget.js",
 	"js/mobiscroll.select.js",
 	"js/mobiscroll.list.js"
-      ],
-      "styles": [
-	"css/mobiscroll.animation.css",
-	"css/mobiscroll.widget.css",
-        "css/mobiscroll.scroller.css"
-      ],
-      "files": [
-        "js/mobiscroll.appframework.js",
-        "js/mobiscroll.jqmwidget.js",
         "js/mobiscroll.widget.android-holo.js",
         "js/mobiscroll.widget.android.js",
         "js/mobiscroll.widget.ios7.js",
@@ -51,6 +43,29 @@
         "js/mobiscroll.widget.jqm.js",
         "js/mobiscroll.widget.sense-ui.js",
         "js/mobiscroll.widget.wp.js",
+      ],
+      "styles": [
+	"css/mobiscroll.animation.css",
+        "css/mobiscroll.icons.css",
+        "css/mobiscroll.scroller.android.css",
+        "css/mobiscroll.scroller.android-holo.css",
+        "css/mobiscroll.scroller.css",
+        "css/mobiscroll.scroller.ios7.css",
+        "css/mobiscroll.scroller.ios.css",
+        "css/mobiscroll.scroller.jqm.css",
+        "css/mobiscroll.scroller.sense-ui.css",
+        "css/mobiscroll.scroller.wp.css",
+        "css/mobiscroll.widget.android.css",
+        "css/mobiscroll.widget.android-holo.css",
+	"css/mobiscroll.widget.css",
+        "css/mobiscroll.widget.ios7.css",
+        "css/mobiscroll.widget.ios.css",
+        "css/mobiscroll.widget.jqm.css",
+        "css/mobiscroll.widget.sense-ui.css",
+        "css/mobiscroll.widget.wp.css"
+      ],
+      "files": [
+        "js/mobiscroll.appframework.js",
         "js/mobiscroll.zepto.js",
         "i18n/mobiscroll.i18n.cs.js",
         "i18n/mobiscroll.i18n.de.js",
